Fixed panel alignment.

--- a/mistria/src/styles/App.css
+++ b/mistria/src/styles/App.css
@@ -6,6 +6,7 @@
 .panel-layout {
   display: flex;
   width: 100%;
+  justify-content: center 
 }
 
 .panel-child {
